cmake_minimum_required(VERSION 3.25)
project(C)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(.idea)
include_directories(.vscode)

add_executable(C
        .idea/.gitignore
        .idea/C.iml
        .idea/modules.xml
        .idea/vcs.xml
        .vscode/launch.json
        .vscode/tasks.json
        0inBin.c
        100.c
        1inbin.c
        2digit.c
        3digitdiv3.c.c
        3or2digit.c
        3sum=x.c
        areaperi.c
        array-1.c
        array-10.c
        array-11.c
        array-12.c
        array-13.c
        array-14.c
        array-15.c
        array-16.c
        array-17.c
        array-18.c
        array-19.c
        array-2.c
        array-20.c
        array-21.c
        array-22.c
        array-23.c
        array-24.c
        array-25.c
        array-26.c
        array-27.c
        array-28.c
        array-29.c
        array-3.c
        array-30.c
        array-31.c
        array-34.c
        array-4.c
        array-5.c
        array-6.c
        array-7.c
        array-8.c
        array-9.c
        array_all.c
        avg.c
        binary_search_by_funtion.c
        Binary_Search_By_Reccursion.c
        Bitwise_Opearator_in_C.c
        bouncy.c
        "Boxes through a Tunnel.c"
        Breadth_First_Search.c
        Bubble_Sort_via_function.c
        cirrec.c
        compare.c
        coprime.c
        cu-1.c
        cu-2.c
        cu-3.c
        DectoBin.c
        degCtodegF.c
        Depth_First_Search.c
        differentnum.c
        digit.c
        digmult.c
        digtochar.c
        Dijkstra_Algorithm.c
        discount.c
        divby11.c
        divby7.c
        elbill.c
        evenodd.c
        evenodd2.c
        factorial.c
        fibonacci.c
        file-1.c
        file-2.c
        file-3.c
        format_specifiers_charecter.c
        format_specifiers_float.c
        format_specifiers_int.c
        function_pointer.c
        function_returning_pointer.c
        functionVR.c
        gcd.c
        grade.c
        gradeifelse.c
        "Graph_Coloring_Problem(Copy).c"
        Hashing-1.c
        Hashing-2.c
        HOMEWORK.c
        ifelsenesting.c
        krishnamurthy.c
        kth_val_insertion_via_function.c
        lcm.c
        leapyear.c
        linearseaech.c
        Linked_List-1.c
        Linked_List-2.c
        Linked_List-3.c
        Linked_List-4.c
        logicaloperator.c
        main_from_main.c
        matrix_register.c
        misc.c
        mult5.c
        new-4.c
        new.c
        new1.c
        new2.c
        new3.c
        palindrome.c
        pattern-1.c
        pattern-10.c
        pattern-11.c
        pattern-12.c
        pattern-13.c
        pattern-14.c
        pattern-15.c
        pattern-16.c
        pattern-17.c
        pattern-18.c
        pattern-19.c
        pattern-2.c
        pattern-20.c
        pattern-21.c
        pattern-22.c
        pattern-23.c
        pattern-24.c
        pattern-25.c
        pattern-26.c
        pattern-27.c
        pattern-29.c
        pattern-3.c
        pattern-30.c
        pattern-31.c
        pattern-32.c
        pattern-33.c
        pattern-34.c
        pattern-35.c
        pattern-36.c
        pattern-37.c
        pattern-38.c
        pattern-4.c
        pattern-5.c
        pattern-6.c
        pattern-7.c
        pattern-8.c
        pattern-9.c
        pointer.c
        pointer1.c
        posneg.c
        Prim's_Algorithm.c
        primebyshieve.c
        profitloss.c
        Queue-1.c
        Queue-2.c
        reccursion.c
        Reccursive_Fibonacci.c
        Reccursive_Sum.c
        rootquad.c
        scratch-2.c
        scratch.c
        search_using_functions.c
        selection_sort_via_function.c
        series-1.c
        series-2.c
        Shieve_method_of_prime.c
        sqrect.c
        Stack-1.c
        stack_evaluate_postfix.c
        string-1.c
        string-10.c
        string-11.c
        string-12.c
        string-13.c
        string-14.c
        string-15.c
        string-16.c
        string-17.c
        string-18.c
        string-19.c
        string-2.c
        string-20.c
        string-21.c
        string-22.c
        string-23.c
        string-3.c
        string-4.c
        string-5.c
        string-7.c
        string-8.c
        string-9.c
        structure-1.c
        structure-2.c
        structure-3.c
        structure-4.c
        structure-5.c
        structure-6.c
        structure-7.c
        switchcase.c
        Total_count_of_prime_no_in_series.c
        triangle.c
        union-1.c
        union-2.c
        x.c Kruskal's_Algorithm.c Kruskal's_Algorithm.c)
